# dirnutek

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  scanner.rs  tui.rs
tests/: cli.rs  filters.rs
