[package]
name = "dircrab"
version = "0.1.0"
edition = "2024"
authors = ["Neosb <neosb@nuteksecurity.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
regex = "1.10.5"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
httptest = "0.16.3"
assert_cmd = "2.0.14"
predicates = "3.1.3"
tempfile = "3.10.1"
bstr = "1.0"
[[test]]
name = "cli"
path = "tests/cli.rs"

[[test]]
name = "filters"
path = "tests/filters.rs"
