[package]
name = "dirnutek"
version = "0.1.0"
edition = "2024"
authors = ["Neosb <neosb@nuteksecurity.com>"]
description = "A command-line tool for discovering web directories and files."
license-file = "LICENSE"
repository = "https://github.com/NutekSecurity/dircrab"
homepage = "https://github.com/NutekSecurity/dircrab"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
regex = "1.10.5"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.0"
ratatui = "0.26.1"
crossterm = "0.27.0"
once_cell = "1.19.0"

[dev-dependencies]
httptest = "0.16.3"
assert_cmd = "2.0.14"
predicates = "3.1.3"
tempfile = "3.10.1"
bstr = "1.0"
[[test]]
name = "cli"
path = "tests/cli.rs"

[[test]]
name = "filters"
path = "tests/filters.rs"
